Notes:
------
+ Added
- Deleted
x Correction
#number is the identifier of bug report/requested feature/patch
bug reports and feature request are here:
http://sourceforge.net/tracker/?group_id=86862

Version 0.7.6.2
---------------
x MPEG-4: better handling of bitrate mode (VBR or CBR)

Version 0.7.6.1, 2008-03-14
---------------
+ AC3: TrueHD detection
+ MPEG-TS (or Bluray): VC-1, AC3+ and AC3 TrueHD detection
+ AVC in MKV: all SEI userdata infos from x264/eavc in Writing library settings
+ EVO: Better detection of duration
+ Dirac: raw files parsing
+ MPEG-TS: Dirac management
+ MPEG-TS: DVB subtitles/Teletext management
x MPEG-4 Visual (DivX/XviD): writing library name was missing
x MPEG-Video: some DTS files with wrong extension were detected as MPEG-Video
x SWF: Compressed SWF files support is back
x "Inform" option with file as parameter was not well parsed

Version 0.7.6.0, 2008-02-29
---------------
+ ID3v2 cover reading
+ Id3v2.2 (yes, it is old...) support
+ Id3v2: TXXX tags support
+ RMP3 (japanese MP3 based format?) support
+ SAMR in .mp4: some files have wrong sampling rate, forcing it to 8000 Hz
+ File_Created_Date and File_Modified_Date tags added (in advanced mode only)
+ MP3 encoded by Lame: Minimal (VBR) or Nominal (ABR) bitrate
x Better detection of Lame encoder
x AVC Display Aspect Ratio was not well detected if AVC is in a .mp4 container
x Matroska Display Aspect Ratio was deleted if AVC aspect ratio was set, now Matroska has priority
x "Subwoofer" term has been replaced by "LFE", more relevant

Version 0.7.5.9, 2008-02-08
---------------
+ AVC: CABAC detection
+ #1886241: AVC: all SEI userdata infos from x264/eavc in Writing library settings
+ ADPCM: compagny which created the stream is now shown in the codec section
+ PCM: precision about Little/Big endianess, Integer/Floating point method
+ #1882691: AC3+: raw files are now detected
x AVC: FPS were sometimes 2x the reality
x RealMedia parser was brocken
x FLV parser was crashing